# hypermanager-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/across/: spoke_pool_v3.py  spoke_pool_v3_base.py
examples/blocks_txs/: block_gas.py  blocks.py  txs.py
examples/mev_commit/: events.py  preconfs.py
examples/stargate/: test.py
examples/uniswap/: swaps.py
src/hypermanager/: decorators.py  events.py  helpers.py  manager.py  networks.py  schema.py
src/hypermanager/protocols/: across.py  mev_commit.py  uniswap_v3.py
